chnaged project name(soonseo)